--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
       <article class="rounded border border-zinc-600 p-4">
         <h3 class="flex justify-between text-xl mb-4">
           <span class="text-2xl font-light">Question League</span>
-          <span class="flex space-x-1">
-            <a title="source" href="https://github.com/yahia-soliman/question-league">
-              <svg class="fill-zinc-500 size-6" viewBox="0 0 128 128">
+          <span class="flex space-x-2">
+            <a target="_blank" title="source" href="https://github.com/yahia-soliman/question-league">
+              <svg class="fill-zinc-500 size-6" viewBox="0 0 24 24">
                 <use xlink:href="#github-icon"></use>
               </svg>
             </a>
-            <a title="demo" href="https://qleague.yahia.tech">
+            <a target="_blank" title="live demo" href="https://qleague.yahia.tech">
               <svg class="size-6 fill-zinc-500" viewBox="0 0 16 16">
                 <path id="demo-icon"
                   d="m7.775 3.275 1.25-1.25a3.5 3.5 0 1 1 4.95 4.95l-2.5 2.5a3.5 3.5 0 0 1-4.95 0 .751.751 0 0 1 .018-1.042.751.751 0 0 1 1.042-.018 1.998 1.998 0 0 0 2.83 0l2.5-2.5a2.002 2.002 0 0 0-2.83-2.83l-1.25 1.25a.751.751 0 0 1-1.042-.018.751.751 0 0 1-.018-1.042Zm-4.69 9.64a1.998 1.998 0 0 0 2.83 0l1.25-1.25a.751.751 0 0 1 1.042.018.751.751 0 0 1 .018 1.042l-1.25 1.25a3.5 3.5 0 1 1-4.95-4.95l2.5-2.5a3.5 3.5 0 0 1 4.95 0 .751.751 0 0 1-.018 1.042.751.751 0 0 1-1.042.018 1.998 1.998 0 0 0-2.83 0l-2.5 2.5a1.998 1.998 0 0 0 0 2.83Z">
@@ -58,9 +58,9 @@
       <article class="rounded border border-zinc-600 p-4">
         <h3 class="flex justify-between text-xl mb-4">
           <span class="text-2xl font-light">Local Crafts Marketplace</span>
-          <span class="flex space-x-1">
-            <a title="source" href="https://github.com/AhmedEhab-SG/local-crafts-backend">
-              <svg class="fill-zinc-500 size-6" viewBox="0 0 128 128">
+          <span class="flex space-x-2">
+            <a target="_blank" title="source" href="https://github.com/AhmedEhab-SG/local-crafts-backend">
+              <svg class="fill-zinc-500 size-6" viewBox="0 0 24 24">
                 <use xlink:href="#github-icon"></use>
               </svg>
             </a>
@@ -97,30 +97,36 @@
     </form>
   </section>
   <footer class="mt-auto">
-    <div class="flex justify-end border-b space-x-2 py-2 mb-4 border-b-zinc-600 [&>a>svg]:size-6">
+    <div class="flex justify-end items-center border-b space-x-3 py-3 mb-4 border-b-zinc-600 [&>a>svg]:size-7">
+      <h2 class="mr-auto font-semibold text-xl">CONNECT</h2>
       <a title="github" href="https://github.com/yahia-soliman">
-        <svg class="fill-slate-800 dark:fill-slate-200" viewBox="0 0 128 128">
+        <svg class="fill-slate-800 dark:fill-slate-200" viewBox="0 0 24 24">
           <g id="github-icon">
-            <path fill-rule="evenodd" clip-rule="evenodd"
-              d="M64 5.103c-33.347 0-60.388 27.035-60.388 60.388 0 26.682 17.303 49.317 41.297 57.303 3.017.56 4.125-1.31 4.125-2.905 0-1.44-.056-6.197-.082-11.243-16.8 3.653-20.345-7.125-20.345-7.125-2.747-6.98-6.705-8.836-6.705-8.836-5.48-3.748.413-3.67.413-3.67 6.063.425 9.257 6.223 9.257 6.223 5.386 9.23 14.127 6.562 17.573 5.02.542-3.903 2.107-6.568 3.834-8.076-13.413-1.525-27.514-6.704-27.514-29.843 0-6.593 2.36-11.98 6.223-16.21-.628-1.52-2.695-7.662.584-15.98 0 0 5.07-1.623 16.61 6.19C53.7 35 58.867 34.327 64 34.304c5.13.023 10.3.694 15.127 2.033 11.526-7.813 16.59-6.19 16.59-6.19 3.287 8.317 1.22 14.46.593 15.98 3.872 4.23 6.215 9.617 6.215 16.21 0 23.194-14.127 28.3-27.574 29.796 2.167 1.874 4.097 5.55 4.097 11.183 0 8.08-.07 14.583-.07 16.572 0 1.607 1.088 3.49 4.148 2.897 23.98-7.994 41.263-30.622 41.263-57.294C124.388 32.14 97.35 5.104 64 5.104z">
-            </path>
             <path
-              d="M26.484 91.806c-.133.3-.605.39-1.035.185-.44-.196-.685-.605-.543-.906.13-.31.603-.395 1.04-.188.44.197.69.61.537.91zm2.446 2.729c-.287.267-.85.143-1.232-.28-.396-.42-.47-.983-.177-1.254.298-.266.844-.14 1.24.28.394.426.472.984.17 1.255zM31.312 98.012c-.37.258-.976.017-1.35-.52-.37-.538-.37-1.183.01-1.44.373-.258.97-.025 1.35.507.368.545.368 1.19-.01 1.452zm3.261 3.361c-.33.365-1.036.267-1.552-.23-.527-.487-.674-1.18-.343-1.544.336-.366 1.045-.264 1.564.23.527.486.686 1.18.333 1.543zm4.5 1.951c-.147.473-.825.688-1.51.486-.683-.207-1.13-.76-.99-1.238.14-.477.823-.7 1.512-.485.683.206 1.13.756.988 1.237zm4.943.361c.017.498-.563.91-1.28.92-.723.017-1.308-.387-1.315-.877 0-.503.568-.91 1.29-.924.717-.013 1.306.387 1.306.88zm4.598-.782c.086.485-.413.984-1.126 1.117-.7.13-1.35-.172-1.44-.653-.086-.498.422-.997 1.122-1.126.714-.123 1.354.17 1.444.663zm0 0">
-            </path>
+              d="M12 0C5.374 0 0 5.373 0 12c0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576C20.566 21.797 24 17.3 24 12c0-6.627-5.373-12-12-12z" />
           </g>
         </svg>
       </a>
-      <a title="upwork" href="https://www.upwork.com/freelancers/~0188f1c58a20192418">
-        <svg viewBox=".26 -.21 500 500">
-          <path fill="#14a800"
-            d="M92.38-.21C41.5-.21.26 41.23.26 92.35v314.88c0 51.12 41.25 92.56 92.13 92.56h315.74c50.88 0 92.13-41.44 92.13-92.56V92.35c0-51.12-41.25-92.56-92.13-92.56H92.38z">
-          </path>
-          <path fill="#fff"
-            d="M359.92 303.51c-31.11 0-51.69-24.01-57.45-33.35 7.36-59.01 28.93-77.61 57.45-77.61 28.18 0 50.13 22.53 50.13 55.48s-21.95 55.48-50.13 55.48m0-147.18c-50.71 0-79.13 33.07-87.25 67.12-9.24-17.34-16.04-40.54-21.4-62.1h-70.09v87.24c0 31.7-14.38 55.07-42.59 55.07s-44.37-23.37-44.37-55.06l.3-87.25h-40.4v87.24c0 25.47 8.26 48.56 23.26 65.04 15.48 16.98 36.64 25.95 61.19 25.95 48.78 0 82.81-37.41 82.81-90.96V190c5.14 19.29 17.2 56.39 40.41 88.92l-21.68 123.44h41.08l14.31-87.52c4.7 3.89 9.68 7.41 14.9 10.55a90.604 90.604 0 0 0 45.69 14.09h.08c1.21 0 2.44.07 3.69.07 50.29 0 90.34-38.94 90.34-91.43.01-52.52-40-91.79-90.28-91.79">
-          </path>
+      <a target="_blank" title="telegram" href="https://t.me/yahiaxyz">
+        <svg viewBox="0 0 16 16">
+          <linearGradient id="a" x1="66.67%" x2="41.67%" y1="16.67%" y2="75%">
+            <stop offset="0" stop-color="#37aee2" />
+            <stop offset="1" stop-color="#1e96c8" />
+          </linearGradient>
+          <linearGradient id="b" x1="65.97%" x2="85.12%" y1="43.69%" y2="80.24%">
+            <stop offset="0" stop-color="#eff7fc" />
+            <stop offset="1" stop-color="#fff" />
+          </linearGradient>
+          <circle cx="8" cy="8" r="8" fill="url(#a)" />
+          <path fill="#c8daea"
+            d="M6.53333333 11.6666667c-.25917333 0-.21513333-.09786-.30452-.3446334l-.76214666-2.50830663 5.86666663-3.48039334" />
+          <path fill="#a9c9dd"
+            d="M6.53333333 11.6666667c.2 0 .28836667-.0914667.4-.2L8 10.4294667l-1.33053333-.80233337" />
+          <path fill="url(#b)"
+            d="m6.66933333 9.62733333 3.224 2.38193337c.36789997.2029933.63342667.0978933.72506667-.3415667l1.3123333-6.1842c.13436-.53868-.20534-.783-.5572933-.62321333l-7.706 2.9714c-.52600667.21098-.52294.50444-.09588.6352l1.97753333.61722 4.57819997-2.88833334c.2161267-.13106.4144867-.06059933.25168.08389334" />
         </svg>
       </a>
-      <a title="linkedin" href="https://www.linkedin.com/in/yahiasoliman/">
+      <a target="_blank" title="linkedin" href="https://www.linkedin.com/in/yahiasoliman/">
         <svg viewBox="0 5 2490 2490">
           <path fill="#fff" d="M185.2 313.1H2252V2291H185.2z"></path>
           <path fill="#0a66c2"
@@ -128,6 +134,16 @@
           </path>
           <path fill="#fff"
             d="M756.7 2088.8v-1121H384.1v1121zm-186.2-1274c129.9 0 210.8-86.1 210.8-193.7-2.4-110-80.9-193.7-208.3-193.7-127.5 0-210.8 83.7-210.8 193.7 0 107.6 80.8 193.7 205.9 193.7zm392.4 1274h372.6v-626c0-33.5 2.4-67 12.3-90.9 26.9-67 88.2-136.3 191.2-136.3 134.8 0 188.7 102.8 188.7 253.5v599.6h372.6V1446c0-344.3-183.8-504.5-428.9-504.5-201 0-289.2 112.3-338.3 188.8h2.5V967.8H962.9c4.9 105.2 0 1121 0 1121z">
+          </path>
+        </svg>
+      </a>
+      <a target="_blank" title="upwork" href="https://www.upwork.com/freelancers/~0188f1c58a20192418">
+        <svg viewBox=".26 -.21 500 500">
+          <path fill="#14a800"
+            d="M92.38-.21C41.5-.21.26 41.23.26 92.35v314.88c0 51.12 41.25 92.56 92.13 92.56h315.74c50.88 0 92.13-41.44 92.13-92.56V92.35c0-51.12-41.25-92.56-92.13-92.56H92.38z">
+          </path>
+          <path fill="#fff"
+            d="M359.92 303.51c-31.11 0-51.69-24.01-57.45-33.35 7.36-59.01 28.93-77.61 57.45-77.61 28.18 0 50.13 22.53 50.13 55.48s-21.95 55.48-50.13 55.48m0-147.18c-50.71 0-79.13 33.07-87.25 67.12-9.24-17.34-16.04-40.54-21.4-62.1h-70.09v87.24c0 31.7-14.38 55.07-42.59 55.07s-44.37-23.37-44.37-55.06l.3-87.25h-40.4v87.24c0 25.47 8.26 48.56 23.26 65.04 15.48 16.98 36.64 25.95 61.19 25.95 48.78 0 82.81-37.41 82.81-90.96V190c5.14 19.29 17.2 56.39 40.41 88.92l-21.68 123.44h41.08l14.31-87.52c4.7 3.89 9.68 7.41 14.9 10.55a90.604 90.604 0 0 0 45.69 14.09h.08c1.21 0 2.44.07 3.69.07 50.29 0 90.34-38.94 90.34-91.43.01-52.52-40-91.79-90.28-91.79">
           </path>
         </svg>
       </a>
