target blank on github

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
   <footer class="mt-auto">
     <div class="flex justify-end items-center border-b space-x-3 py-3 mb-4 border-b-zinc-600 [&>a>svg]:size-7">
       <h2 class="mr-auto font-semibold text-xl">CONNECT</h2>
-      <a title="github" href="https://github.com/yahia-soliman">
+      <a target="_blank" title="github" href="https://github.com/yahia-soliman">
         <svg class="fill-slate-800 dark:fill-slate-200" viewBox="0 0 24 24">
           <g id="github-icon">
             <path
